--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -14,6 +14,18 @@ body {
   flex-direction: column;
   height: 100%;
   margin: 0;
+  background: #2980b9; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #2c3e50,
+    #2980b9
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #2c3e50,
+    #2980b9
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  color: #fff;
 }
 
 main {
@@ -47,4 +59,9 @@ p {
   position: absolute;
   white-space: nowrap;
   width: 0px;
+}
+
+
+.todo__form {
+  
 }
